yamlFiles/ingress-route-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: api-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: poi
          servicePort: 80
        path: /api/poi/.*
      - backend:
          serviceName: trips
          servicePort: 80
        path: /api/trips/.*        
      - backend:
          serviceName: userprofile
          servicePort: 80
        path: /api/user/.*        
      - backend:
          serviceName: user-java
          servicePort: 80
        path: /api/user-java/.*
